website/versioned_docs/0.29/troubleshooting.md
---
id: version-0.29-troubleshooting
title: troubleshooting
original_id: troubleshooting
---
<a id="content"></a><table width="100%"><tbody><tr><td><h1><a class="anchor" name="troubleshooting"></a>Troubleshooting <a class="hash-link" href="docs/troubleshooting.html#troubleshooting">#</a></h1></td><td style="text-align:right;"><a target="_blank" href="https://github.com/facebook/react-native/blob/0.29-stable/docs/Troubleshooting.md">Edit on GitHub</a></td></tr></tbody></table><div><p>These are some common issues you may run into while setting up React Native. If you encounter something that is not listed here, try <a href="https://github.com/facebook/react-native/issues/" target="_blank">searching for the issue in GitHub</a>.</p><h3><a class="anchor" name="port-already-in-use"></a>Port already in use <a class="hash-link" href="docs/troubleshooting.html#port-already-in-use">#</a></h3><p>The React Native packager runs on port 8081. If another process is already using that port (such as McAfee Antivirus on Windows), you can either terminate that process, or change the port that the packager uses.</p><h4><a class="anchor" name="terminating-a-process-on-port-8081"></a>Terminating a process on port 8081 <a class="hash-link" href="docs/troubleshooting.html#terminating-a-process-on-port-8081">#</a></h4><p>Run the following command on a Mac to find the id for the process that is listening on port 8081:</p><p><code>$ sudo lsof -n -i4TCP:8081 | grep LISTEN</code></p><p>Then run the following to terminate the process:</p><p><code>$ kill -9 &lt;PID&gt;</code></p><h4><a class="anchor" name="using-a-port-other-than-8081"></a>Using a port other than 8081 <a class="hash-link" href="docs/troubleshooting.html#using-a-port-other-than-8081">#</a></h4><p>You can configure the packager to use a port other than 8081 by using the <code>port</code> parameter:</p><p><code>$ react-native start --port=8088</code></p><p>You will also need to update your applications to load the JavaScript bundle from the new port.</p><p>To change the port used by an iOS application, edit the <code>AppDelegate.m</code> file in the <code>ios</code> folder. Scroll down to the line where the bundle location is defined, and replace 8081 with the new port.</p><div class="prism language-javascript">jsCodeLocation <span class="token operator">=</span> <span class="token punctuation">[</span>NSURL URLWithString<span class="token punctuation">:</span>@<span class="token string">"http://localhost:8088/index.ios.bundle"</span><span class="token punctuation">]</span><span class="token punctuation">;</span></div><h3><a class="anchor" name="npm-locking-error"></a>NPM locking error <a class="hash-link" href="docs/troubleshooting.html#npm-locking-error">#</a></h3><p>If you encounter an error such as "npm WARN locking Error: EACCES" while using the React Native CLI, try running the following:</p><div class="prism language-javascript">sudo chown <span class="token operator">-</span>R $USER <span class="token operator">~</span><span class="token operator">/</span><span class="token punctuation">.</span>npm
sudo chown <span class="token operator">-</span>R $USER <span class="token operator">/</span>usr<span class="token operator">/</span>local<span class="token operator">/</span>lib<span class="token operator">/</span>node_modules</div><h3><a class="anchor" name="missing-libraries-for-react"></a>Missing libraries for React <a class="hash-link" href="docs/troubleshooting.html#missing-libraries-for-react">#</a></h3><p>If you added React Native manually to your project, make sure you have included all the relevant dependencies that you are using, like <code>RCTText.xcodeproj</code>, <code>RCTImage.xcodeproj</code>. Next, the binaries built by these dependencies have to be linked to your app binary. Use the <code>Linked Frameworks and Binaries</code> section in the Xcode project settings. More detailed steps are here: <a href="docs/linking-libraries-ios.html#content" target="_blank">Linking Libraries</a>.</p><p>If you are using CocoaPods, verify that you have added React along with the subspecs to the <code>Podfile</code>. For example, if you were using the <code>&lt;Text /&gt;</code>, <code>&lt;Image /&gt;</code> and <code>fetch()</code> APIs, you would need to add these in your <code>Podfile</code>:</p><div class="prism language-javascript">pod <span class="token string">'React'</span><span class="token punctuation">,</span> <span class="token punctuation">:</span>path <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token string">'../node_modules/react-native'</span><span class="token punctuation">,</span> <span class="token punctuation">:</span>subspecs <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token punctuation">[</span>
  <span class="token string">'RCTText'</span><span class="token punctuation">,</span>
  <span class="token string">'RCTImage'</span><span class="token punctuation">,</span>
  <span class="token string">'RCTNetwork'</span><span class="token punctuation">,</span>
  <span class="token string">'RCTWebSocket'</span><span class="token punctuation">,</span>
<span class="token punctuation">]</span></div><p>Next, make sure you have run <code>pod install</code> and that a <code>Pods/</code> directory has been created in your project with React installed. CocoaPods will instruct you to use the generated <code>.xcworkspace</code> file henceforth to be able to use these installed dependencies.</p><h4><a class="anchor" name="argument-list-too-long-recursive-header-expansion-failed"></a>Argument list too long: recursive header expansion failed <a class="hash-link" href="docs/troubleshooting.html#argument-list-too-long-recursive-header-expansion-failed">#</a></h4><p>In the project's build settings, <code>User Search Header Paths</code> and <code>Header Search Paths</code> are two configs that specify where Xcode should look for <code>#import</code> header files specified in the code. For Pods, CocoaPods uses a default array of specific folders to look in. Verify that this particular config is not overwritten, and that none of the folders configured are too large. If one of the folders is a large folder, Xcode will attempt to recursively search the entire directory and throw above error at some point.</p><p>To revert the <code>User Search Header Paths</code> and <code>Header Search Paths</code> build settings to their defaults set by CocoaPods - select the entry in the Build Settings panel, and hit delete. It will remove the custom override and return to the CocoaPod defaults.</p><h3><a class="anchor" name="no-transports-available"></a>No transports available <a class="hash-link" href="docs/troubleshooting.html#no-transports-available">#</a></h3><p>React Native implements a polyfill for WebSockets. These <a href="https://github.com/facebook/react-native/blob/master/Libraries/JavaScriptAppEngine/Initialization/InitializeJavaScriptAppEngine.js" target="_blank">polyfills</a> are initialized as part of the react-native module that you include in your application through <code>import React from 'react-native'</code>. If you load another module that requires WebSockets, such as <a href="https://github.com/facebook/react-native/issues/3645" target="_blank">Firebase</a>, be sure to load/require it after react-native:</p><div class="prism language-javascript">import React from <span class="token string">'react-native'</span><span class="token punctuation">;</span>
import Firebase from <span class="token string">'firebase'</span><span class="token punctuation">;</span></div><h2><a class="anchor" name="shell-command-unresponsive-exception"></a>Shell Command Unresponsive Exception <a class="hash-link" href="docs/troubleshooting.html#shell-command-unresponsive-exception">#</a></h2><p>If you encounter a ShellCommandUnresponsiveException exception such as:</p><div class="prism language-javascript">Execution failed <span class="token keyword">for</span> task <span class="token string">':app:installDebug'</span><span class="token punctuation">.</span>
  com<span class="token punctuation">.</span>android<span class="token punctuation">.</span>builder<span class="token punctuation">.</span>testing<span class="token punctuation">.</span>api<span class="token punctuation">.</span>DeviceException<span class="token punctuation">:</span> com<span class="token punctuation">.</span>android<span class="token punctuation">.</span>ddmlib<span class="token punctuation">.</span>ShellCommandUnresponsiveException</div><p>Try <a href="https://github.com/facebook/react-native/issues/2720" target="_blank">downgrading your Gradle version to 1.2.3</a> in <code>android/build.gradle</code>.</p><h2><a class="anchor" name="react-native-init-hangs"></a>react-native init hangs <a class="hash-link" href="docs/troubleshooting.html#react-native-init-hangs">#</a></h2><p>If you run into issues where running <code>react-native init</code> hangs in your system, try running it again in verbose mode and refering to <a href="https://github.com/facebook/react-native/issues/2797" target="_blank">#2797</a> for common causes:</p><div class="prism language-javascript">react<span class="token operator">-</span>native init <span class="token operator">--</span>verbose</div></div><div class="docs-prevnext"></div><div class="survey"><div class="survey-image"></div><p>Recently, we have been working hard to make the documentation better based on your feedback. Your responses to this yes/no style survey will help us gauge whether we moved in the right direction with the improvements. Thank you!</p><center><a class="button" href="https://www.facebook.com/survey?oid=516954245168428">Take Survey</a></center></div>